# fastapi_mcp_server

./: README.md  main.py  mcp_client_api.py  pyproject.toml
