[project]
name = "fastapi-mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-mcp>=0.1.4",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "mcp[cli]>=1.6.0",
]
